add function plot

--- a/00_basics/sc_dimensions.ipynb
+++ b/00_basics/sc_dimensions.ipynb
@@ -954,7 +954,38 @@
     "\n",
     "In our case the $x$ of our function is the position of the cursor on the screen.\n",
     "\n",
-    "Note that by multiplying a factor to $a$ we could in- or decrease the separation of our signals in the mix."
+    "Note that by multiplying a factor to $a$ we could in- or decrease the separation of our signals in the mix.\n",
+    "\n",
+    "Here is an example plot of the two functions combined where we want to distribute 5 points and looking at the separation of the 3th point.\n",
+    "\n",
+    "![](mouse_plot.svg)\n",
+    "\n",
+    "The plot was generated with Python using\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x_up = np.linspace(0.2, 0.4)\n",
+    "x_down = np.linspace(0.4, 0.6)\n",
+    "left_floor = np.linspace(0.0, 0.2)\n",
+    "right_floor = np.linspace(0.6, 1.0)\n",
+    "\n",
+    "plt.plot(x_up, 5*x_up-1, color='r', label='f_up')\n",
+    "plt.plot(x_down, 5*x_down-1, linestyle='--', color='r')\n",
+    "\n",
+    "plt.plot(x_down, -5*x_down+3, color='b', label='f_down')\n",
+    "plt.plot(x_up, -5*x_up+3, linestyle='--', color='b')\n",
+    "\n",
+    "plt.plot(left_floor, 0*left_floor, color='g', label='0 floor')\n",
+    "plt.plot(right_floor, 0*right_floor, color='g')\n",
+    "\n",
+    "plt.vlines(0.4, 0, 1, color='y', linestyle=':')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.show;\n",
+    "```"
    ]
   },
   {
