rework statistics section

--- a/refs.bib
+++ b/refs.bib
@@ -6,3 +6,13 @@
     address = {Quebec City, Canada},
     isbn = {978-1999579500}
 }
+
+@Book{2016:statistik,
+	AUTHOR = {Fahrmeir, Ludwig and Heumann, Christian and Künstler, Rita and Pigeot, Iris and Tutz, Gerhard},
+	YEAR = {2016},
+	TITLE = {Statistik - Der Weg zur Datenanalyse},
+	EDITION = {8},
+	ISBN = {978-3-662-50372-0},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {Berlin Heidelberg New York},
+}
