--- a/00_basics/py_dimensions.ipynb
+++ b/00_basics/py_dimensions.ipynb
@@ -10,7 +10,7 @@
     "After we know how to operate with vectors and matrices in SuperCollider, we now want to compare it with its counterparts in Python.\n",
     "Although Python is a [battery included language](https://www.python.org/dev/peps/pep-0206/#batteries-included-philosophy) (meaning it has already a big built-in library), we still rely on an the third-party library called [numpy](https://numpy.org/) when operating with matrices, vectors or more sophisticated mathematical expressions.\n",
     "\n",
-    "It is a unwritten rule to `import numpy as np` and for this course we will continue with this tradition."
+    "It is an unwritten rule to `import numpy as np` and for this course we will continue with this tradition."
    ]
   },
   {
@@ -92,7 +92,7 @@
     "\\sqrt{x} = x^{\\frac{1}{2}}\n",
     "$$\n",
     "\n",
-    "which is motivated by the fact that $\\left( \\sqrt{x} \\right) ^2 = \\left( x^{\\frac{1}{2}} \\right)^2 = x^{2\\frac{1}{2}} = x^{\\frac{1}{1}} = x$.\n",
+    "which is motivated by the fact that $\\left( x^{\\frac{1}{2}} \\right)^2 = x^{2\\frac{1}{2}} = x^{\\frac{1}{1}} = x = \\left( \\sqrt{x} \\right) ^2$.\n",
     "\n",
     "We can use this convention to use the built in power calculation of Python to calculate a square root, but we cas also use the numpy function `sqrt`."
    ]
@@ -313,7 +313,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-139-a800a3f18e3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-a800a3f18e3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (2,) "
      ]
     }
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "matrix_a*2"
+    "matrix_a * 2"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "id": "87de055e-bcca-4357-986b-6616e25612d0",
    "metadata": {},
    "source": [
-    "But when multiplying a matrix with another matrix we must pay attention as this does a pairwise multiplication as well - not like we have defined matrix multiplication."
+    "But when multiplying a matrix with another matrix we must pay attention as this does a pairwise multiplication as well - which is not how we defined matrix multiplication"
    ]
   },
   {
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "matrix_a*matrix_a"
+    "matrix_a * matrix_a"
    ]
   },
   {
@@ -494,7 +494,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-145-3a6d420cfb2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-3a6d420cfb2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 2)"
      ]
     }
@@ -511,7 +511,7 @@
     "## Working with matrices\n",
     "\n",
     "After we have seen the basic fundaments of matrices and vectors in Python via numpy we can now use them in an example.\n",
-    "Thanks to the amount of third-party libraries we can almost work with any kind of data in Python, so instead of working with audio like in SuperCollider we will take a look image data."
+    "Thanks to the large number of third-party libraries we can almost work with any kind of data in Python, so instead of working with audio like in SuperCollider we will take a look image data."
    ]
   },
   {
@@ -543,7 +543,7 @@
    "id": "564dd5ee-c862-4da8-84ee-952f40fd7053",
    "metadata": {},
    "source": [
-    "Digital images are stored as matrices - lets take a look at them.\n",
+    "Digital images are stored as matrices - let's take a look at them.\n",
     "We can use the `shape` parameter of an array to take a look at the dimensions - just like in SuperCollider."
    ]
   },
