--- a/refs.bib
+++ b/refs.bib
@@ -16,3 +16,13 @@
 	PUBLISHER = {Springer-Verlag},
 	ADDRESS = {Berlin Heidelberg New York},
 }
+
+@BOOK{geron2019,
+	AUTHOR = {Géron, Aurélien},
+	YEAR = {2019},
+	TITLE = {Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow - Concepts, Tools, and Techniques to Build Intelligent Systems},
+	EDITION = {},
+	ISBN = {978-1-492-03261-8},
+	PUBLISHER = {"O'Reilly Media, Inc."},
+	ADDRESS = {Sebastopol},
+}
