remove show parameter

--- a/01_spect_resynth/canvas.ipynb
+++ b/01_spect_resynth/canvas.ipynb
@@ -238,13 +238,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_signal(signal: np.ndarray, steps: int = SAMPLING_RATE/20, show: bool = True):\n",
+    "def plot_signal(signal: np.ndarray, steps: int = SAMPLING_RATE/20):\n",
     "    plt.plot(np.arange(0, len(signal), 1), signal)\n",
     "    if steps:\n",
     "        plt.xlim(0, steps)\n",
     "    plt.hlines(0, 0, len(signal), color='red')\n",
-    "    if show:\n",
-    "        plt.show();"
+    "    plt.show();"
    ]
   },
   {
