add resynth chapter to book

--- a/refs.bib
+++ b/refs.bib
@@ -26,3 +26,13 @@
 	PUBLISHER = {"O'Reilly Media, Inc."},
 	ADDRESS = {Sebastopol},
 }
+
+@BOOK{Königsberger2013,
+	AUTHOR = {Königsberger, Konrad},
+	YEAR = {2013},
+	TITLE = {Analysis 2},
+	EDITION = {5},
+	ISBN = {978-3-662-05699-8},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {Berlin Heidelberg New York},
+}
