add sc to python communication

--- a/00_basics/osc_communication.ipynb
+++ b/00_basics/osc_communication.ipynb
@@ -222,7 +222,7 @@
    "id": "33fa4297-0272-48ee-b81d-57a9adc3e4b4",
    "metadata": {},
    "source": [
-    "#### Debugging the communication\n",
+    "#### Debugging communication\n",
     "\n",
     "If no sound was played there are some steps that can help you to find the issue.\n",
     "\n",
@@ -230,6 +230,258 @@
     "* Do not miss the slash in the osc path: For SuperCollider and for Python\n",
     "* Use [`OSCFunc.trace(false, true);`](https://doc.sccode.org/Classes/OSCFunc.html#*trace) in SuperCollider to dump all incoming OSC messages. If you do not receive any kind of messages here there is something wrong with the addresses."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4f78d5b-4c24-44f1-ae8e-a8429eb1e522",
+   "metadata": {},
+   "source": [
+    "### From SuperCollider to Python\n",
+    "\n",
+    "After we have seen how to send messages from Python to SuperCollider we want to take a look at how we can send messages from SuperCollider to Python.\n",
+    "\n",
+    "Before we start by setting up a OSC server in Python we want to discuss two things: Error handling and freeing resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18598b55-09d9-4c72-ad5a-0222d4121fb6",
+   "metadata": {},
+   "source": [
+    "#### Error handling in Python\n",
+    "\n",
+    "SuperCollider has a different philosophy of error handling than most commonly used programming languages such as Python which are a bit stricter on errors.\n",
+    "This does not mean that SuperCollider will simply follow blindly everything without giving us feedback if something failed but it will often try to *fix* something instead of throwing an error.\n",
+    "\n",
+    "This strictness seems maybe annoying at first but when working with databases or files this strictness of error handling is useful - imagine if we want to copy files from location A to location B and delete them afterwards but while copying we run out of space.\n",
+    "This would be a good time to stop the program with an error instead of continuing with the deletion of the files in location A and this is where exceptions come into play.\n",
+    "\n",
+    "A good example of this is the [division by zero](https://en.wikipedia.org/wiki/Division_by_zero) which is undefined an *not* infinity and can [lead to real life consequences](https://www.wired.com/1998/07/sunk-by-windows-nt/)\n",
+    "\n",
+    "```supercollider\n",
+    "1/0\n",
+    "-> inf\n",
+    "```\n",
+    "\n",
+    "Compare this to Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24457840-1d4c-4447-b275-453190df1253",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "1/0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6feac4f-1691-4a77-8e32-cac180eca5fe",
+   "metadata": {},
+   "source": [
+    "which yields on exception and therefore stops the execution our program.\n",
+    "This does not mean that anytime we want to divide by 0 our Python program will stop, we just have catch this exception and explicitly tell Python what to do in this case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe5dd6f-9b8c-48db-95ab-beb502722476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do not divide by zero\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def safe_division(x):\n",
+    "    try:\n",
+    "        return 1/x\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Do not divide by zero\")\n",
+    "        return 0\n",
+    "\n",
+    "safe_divide(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b62d215-16cc-4639-8d46-35c65987a6ed",
+   "metadata": {},
+   "source": [
+    "SuperCollider has also an [Exception](https://doc.sccode.org/Classes/Exception.html) class but as seen above is not as used as much.\n",
+    "\n",
+    "The motivation on the more relaxed (or implicit) error handling of SuperCollider is to not stop the audio output on ambigious inputs during live coding - one discipline where Python is not often used for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5bda86b-0753-4b9e-a2f8-b83e79e6b47e",
+   "metadata": {},
+   "source": [
+    "#### Freeing resources\n",
+    "\n",
+    "Coming from SuperCollide one is familiar with the [`Done`](https://doc.sccode.org/Classes/Done.html) class which adds the posibilty to free a synth based on certain occasions (e.g. by reaching the end of an amplitude envelope).\n",
+    "Although on high level languages like Python or sclang we do not have to care so much about allocation and freeing of resources like in more low level languages like C++ (which is one of the reasons it is so fast) it is still necessary to think about this on a higher level.\n",
+    "We only have limited resources on a computer and need to clean up unused resources like silent synths that will never generate any sounds anymore - this gets even more relevant the more these resources are limited.\n",
+    "\n",
+    "A really limited resource are ports on a computer - only one application can serve a port and if this port is already in use we can not use this port for our application.\n",
+    "As a server needs to listen on a port it is best practice to also tell the operating system that we are not using the port anymore if we stop listening for messages with our server so this port can be re-used again later.\n",
+    "We can combine this with our Exception handling discussed above which we will see in a minute.\n",
+    "\n",
+    "When working with network or file resources (which are actually [quiet similiar](https://en.wikipedia.org/wiki/Everything_is_a_file)) it is best practice to clean up after oneself after the work is done.\n",
+    "It gets problematic if an error occures while we do some work because then our clean up routine will maybe not executed.\n",
+    "Python has a `finally` block for this which gets called if any exception occured or if everything worked as expected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c1bcb47-c1bf-49ff-bdc5-2e83a318d115",
+   "metadata": {},
+   "source": [
+    "#### Setting up the OSC server in Python\n",
+    "\n",
+    "Now we can start by setting up a OSC server in Python.\n",
+    "\n",
+    "We start by setting up a *dispatcher* which simply tells Python what to do when a message on a certain path is received."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feef49d7-989d-4c94-b144-d65d63799bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pythonosc.dispatcher.Handler at 0x10ea4b430>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pythonosc.dispatcher import Dispatcher\n",
+    "from datetime import datetime\n",
+    "\n",
+    "dispatcher = Dispatcher()\n",
+    "\n",
+    "# **kwargs collects any arguments we forgot to set explicitly \n",
+    "def print_osc(address, message, **kwargs):\n",
+    "    print(\"{time} - {message}\".format(\n",
+    "        time=datetime.now().strftime(\"%H:%M:%S.%f\"),\n",
+    "        message=message,\n",
+    "    ))\n",
+    "\n",
+    "# we map the print_osc function as *handler* on path my_python_path\n",
+    "dispatcher.map(address=\"/my_python_path\", handler=print_osc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bed147b-eae5-4a76-9ffe-71cfa69689c5",
+   "metadata": {},
+   "source": [
+    "After we set up the logic of how to respond to messages we can now bind this to a port and therefore acting as a server.\n",
+    "\n",
+    "This will show a difference between sclang and Python: normally Python can only do one thing at once - so when Python is listening for messages we can not do something else in the meantime like in sclang.\n",
+    "\n",
+    "Therefore we should discuss on how to stop the server - once started we can not do something else in Python!\n",
+    "In *Jupyter Lab* one can click on *Interrupt Kernel* in the *Kernel* tab or enter the shortcut `i i` - this wil trigger a *keyboard interrupt* which is normally triggered by hitting `cmd/control  c` - but for now we want to keep the server running."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f32c546-3ffc-4848-99c3-e77b3839e6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start OSC server on port 57310\n",
+      "13:56:16.300434 - hello from supercollider\n",
+      "Shutdown Python server on port 57310\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pythonosc.osc_server import ThreadingOSCUDPServer\n",
+    "\n",
+    "server = ThreadingOSCUDPServer(\n",
+    "    # sclang is listening on port 57320 so we take 57310 for python\n",
+    "    server_address=(\"127.0.0.1\", 57310),\n",
+    "    dispatcher=dispatcher\n",
+    ")\n",
+    "print(f\"Start OSC server on port {server.server_address[-1]}\")\n",
+    "\n",
+    "try:\n",
+    "    server.serve_forever()\n",
+    "except KeyboardInterrupt:\n",
+    "    print(f\"Shutdown Python server on port {server.server_address[-1]}\")\n",
+    "finally:\n",
+    "    # we tell the OS that we do not need any longer the port\n",
+    "    server.server_close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45abea96-3e06-4e0a-b206-8f65c932b1fc",
+   "metadata": {},
+   "source": [
+    "As the server is now running (indicated by `*` next to the code cell in Jupyter) we can send a message from SuperCollider to Python.\n",
+    "SuperCollider is built around OSC (but also quiet restricted to OSC) so we can easily set up a client and send a message.\n",
+    "\n",
+    "```supercollider\n",
+    "// our python osc server is listening on port 57310\n",
+    "b = NetAddr(\"127.0.0.1\", 57310)\n",
+    "\n",
+    "b.sendMsg(\"/my_python_path\", \"hello from supercollider\")\n",
+    "```\n",
+    "\n",
+    "Once we run these lines in sclang we will see the message appear in Python.\n",
+    "We can now close the server by running *Interrup Kernel*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7a84a22-46a1-4920-b321-32a90fb86318",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
