add json and markov example

--- a/00_basics/osc_communication.ipynb
+++ b/00_basics/osc_communication.ipynb
@@ -279,7 +279,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -329,7 +329,7 @@
     "        print(\"Do not divide by zero\")\n",
     "        return 0\n",
     "\n",
-    "safe_divide(0)"
+    "safe_division(0)"
    ]
   },
   {
@@ -383,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "<pythonosc.dispatcher.Handler at 0x10ea4b430>"
+       "<pythonosc.dispatcher.Handler at 0x11040fe50>"
       ]
      },
      "execution_count": null,
@@ -432,7 +432,7 @@
      "output_type": "stream",
      "text": [
       "Start OSC server on port 57310\n",
-      "13:56:16.300434 - hello from supercollider\n",
+      "23:11:15.004284 - hello from supercollider\n",
       "Shutdown Python server on port 57310\n"
      ]
     }
@@ -476,12 +476,295 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "780cbe32-3c6f-4085-aa83-b85aaae55fe7",
+   "metadata": {},
+   "source": [
+    "### Calculating with Python from Supercollider via OSC\n",
+    "\n",
+    "We have now seen the communication from `Python -> SuperCollider` and `SuperCollider -> Python` so now we want to build an example where both languages can communicate with each other, so `SuperCollider <-> Python`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83efb9d9-849a-48c3-8e95-412711e4e874",
+   "metadata": {},
+   "source": [
+    "## JSON\n",
+    "\n",
+    "There are a variety of formats to exchange and store information.\n",
+    "One of the most commonly used is JSON which found wide adaption because it mimics the data structure of JavaScript which is the only available programming language in browsers.\n",
+    "In SuperCollider and Python the data structure of JSON is closely related to a dictionary, where under a *key* (traditionally a string) a *value* is stored which makes accessing data properties more easy than in an array.\n",
+    "OSC on the other hand is more related to a list which lacks the mapping of its items because I need to know what the first, secound, ... value actually represents and I can not change this order without modifying code.\n",
+    "\n",
+    "Although OSC can also be stored as a file it is used most of the time in a network domain.\n",
+    "JSON finds adaption in networking and in file storage and trades human-readability for performance by not relying on a binary encoding for its messages like OSC and instead using human readable string representations for its data, therefore we can take a look at an example JSON.\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "    \"key_a\": \"value\",\n",
+    "    \"key_b\": [1, 2, 3],\n",
+    "    \"key_c\": {\n",
+    "        \"nested_key\": 42.0\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Nesting dictionaries and storing arrays are really handy and [are not (well) supported by OSC](https://doc.sccode.org/Guides/OSC_communication.html).\n",
+    "Another benefit is that we can store large data in JSON (multiple GBs are not uncommon but also not the best format for such endeavours) which gets difficult when relying on the OSC network protocol UDP.\n",
+    "\n",
+    "As mentioned before the SuperCollider environment is built around OSC and although we can set up easily an OSC server and client in sclang it is [not possible](https://github.com/supercollider/supercollider/issues/5310) to set up a server or client which responds to something differently than OSC (keep in mind that quarks like [API](https://github.com/supercollider-quarks/API) set up a server in another language and this server will transfer the data back to sclang via OSC).\n",
+    "\n",
+    "This does not mean that we can not use JSON in SuperCollider but only through exchanging files by using [`parseYAMLFile`](https://doc.sccode.org/Classes/String.html#-parseYAMLFile) (a bit misleading as this YAML is another format like JSON but the YAML parser can parse JSON and YAML - `parseJSON` was added in SC 3.11).\n",
+    "\n",
+    "```supercollider\n",
+    "j = \"example.json\".parseYAMLFile;\n",
+    "\n",
+    "j[\"key_b\"];\n",
+    "-> [ 1, 2, 3 ]\n",
+    "```\n",
+    "\n",
+    "As the benefit of JSON over OSC is that we can transfer nested arrays of arbitrary length we can come up with an example where we make use of this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1777048-45ff-4d0d-ac1e-8967b18ed813",
+   "metadata": {},
+   "source": [
+    "#### Markov chains\n",
+    "\n",
+    "Before we implement our little example we need to re-visit markov chains.\n",
+    "\n",
+    "A markov chain $M$ of first order and $n$ states is a *stochastic process* which relies only on the former state $i$ to calculate the probabibilty of the next state $j$.\n",
+    "We can write every probability to get from state $i$ to state $j$ for every state $n$ into a $n \\times n$ matrix $P$ which we call a transition matrix.\n",
+    "\n",
+    "One convention of stochastic processes is that all posibilities must sum up to $1$, therefore the sum of each row of $P$ must sum up to $1$ ($=100\\%$), so\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^{n} p_{i,j} = p_{1, j}~+~p_{2,j}~+~\\cdots~+~p_{n,j} = 1\n",
+    "$$\n",
+    "\n",
+    "for every row $j \\in {1, \\dots n}$ of our matrix $P$.\n",
+    "\n",
+    "![markov transition matrix](markov.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6172fc4-1578-4a68-a4c1-7b8dc7023d94",
+   "metadata": {},
+   "source": [
+    "#### Using markov chains with tSNE\n",
+    "\n",
+    "We can schedule the playback of buffer grains according to a Markov transition matrix $P$ which stores the probabilities to get from grain $i$ to grain $j$.\n",
+    "The question is what kind of probabilites we want to have for our matrix $P$ but for this we can use some techniques like *tSNE* for which we need to rely on Python.\n",
+    "\n",
+    "In Python we can calculate the matrix $A$ of a buffer which stores the audio data as $\\# \\text{channels} \\times \\# \\text{samples}$ and of this matrix $A$ we can calculate the spectogram $S$ of size $\\# \\text{frequency bins} \\times \\# \\text{grains}$.\n",
+    "\n",
+    "Instead of the usual dimensionality reduction on the time domain we want to reduce the number of frequency bins of $S$ this time because we want to keep the number of grains so they are deterministic and we can schedule them easily.\n",
+    "Via a 3-dimensional tSNE we obtain a matrix $T$ of size $\\text{grains} \\times 3$.\n",
+    "This matrix $T$ is not a quadratic matrix so we need to think of a way to turn this into a quadratic matrix of form $\\text{grains} \\times \\text{grains}$.\n",
+    "For each grain we have a 3 dimensional reduction of its frequency bins which can be considered a 3 dimensional vector which can be considered a point.\n",
+    "We can now calculate the distance of the 3 dimensional frequency point to all the other 3 dimensional point representation of each grain.\n",
+    "By doing this for each grain we can convert $T$ to a $\\# \\text{grains} \\times \\# \\text{grains}$ matrix $D$ which we can use as a transition matrix $P$ for a markov chain for the scheduling of grains by nomalizing the rows (which we will do in SC).\n",
+    "\n",
+    "The workflow shown below illustrates the workflow for the communication between SuperCollider and Python.\n",
+    "\n",
+    "![JSON workflow](json.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28a56999-57a0-4d6e-96fc-fc8857b25059",
+   "metadata": {},
+   "source": [
+    "### Python"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a84a22-46a1-4920-b321-32a90fb86318",
+   "id": "41a1e71f-4a0e-4ded-a537-4a214250f4c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import librosa\n",
+    "from sklearn.manifold import TSNE\n",
+    "from scipy.spatial import distance_matrix\n",
+    "from pythonosc.udp_client import SimpleUDPClient\n",
+    "import os\n",
+    "import json\n",
+    "\n",
+    "def calculate_markov(file_path: str, grain_size: int, hop_size: int, sc_port=57120, sc_path=\"/calc_finished\"):\n",
+    "    A, sr = librosa.load(file_path, sr=None, mono=True)\n",
+    "    S = librosa.feature.melspectrogram(A, sr=sr, win_length=grain_size, hop_length=hop_size, n_fft=grain_size)\n",
+    "    tsne = TSNE(n_components=3)\n",
+    "    T = tsne.fit_transform(S.T)\n",
+    "    D = distance_matrix(T, T)\n",
+    "    \n",
+    "    # save into json\n",
+    "    json_path = f\"{os.path.splitext(file_path)[0]}.json\"\n",
+    "    j = {\n",
+    "        \"P\": D.tolist(),\n",
+    "        \"grainSize\": grain_size,\n",
+    "        \"hopSize\": hop_size,\n",
+    "        \"audioPath\": os.path.abspath(file_path)\n",
+    "    }\n",
+    "    with open(json_path, \"w\") as f:\n",
+    "        json.dump(j, f)\n",
+    "    \n",
+    "    # send OSC message\n",
+    "    SimpleUDPClient(address='127.0.0.1', port=sc_port).send_message(\n",
+    "        sc_path,\n",
+    "        os.path.abspath(json_path),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d4129d4-67de-47bf-b038-5972c00ebdbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start OSC server on port 57310\n",
+      "Received new message for /Applications/SuperCollider.app/Contents/Resources/sounds/a11wlk01.wav\n",
+      "Shutdown Python server on port 57310\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pythonosc.dispatcher import Dispatcher\n",
+    "from pythonosc.osc_server import ThreadingOSCUDPServer\n",
+    "\n",
+    "def start_calc(address, *message):\n",
+    "    print(f\"Received new message for {message[0]}\")\n",
+    "    calculate_markov(*message)\n",
+    "\n",
+    "dispatcher = Dispatcher()\n",
+    "dispatcher.map(address=\"/start_calc\", handler=start_calc)\n",
+    "\n",
+    "\n",
+    "server = ThreadingOSCUDPServer(\n",
+    "    server_address=(\"127.0.0.1\", 57310),\n",
+    "    dispatcher=dispatcher\n",
+    ")\n",
+    "print(f\"Start OSC server on port {server.server_address[-1]}\")\n",
+    "\n",
+    "try:\n",
+    "    server.serve_forever()\n",
+    "except KeyboardInterrupt:\n",
+    "    print(f\"Shutdown Python server on port {server.server_address[-1]}\")\n",
+    "finally:\n",
+    "    # we tell the OS that we do not need any longer the port\n",
+    "    server.server_close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c5d073c-9652-49d1-a3eb-86c9676c5fa5",
+   "metadata": {},
+   "source": [
+    "### SuperColllider\n",
+    "\n",
+    "Once we run the python server we can take a look at the SuperCollider code which is also included in `markovPlayer.scd` in the directory of this notebook.\n",
+    "\n",
+    "```supercollider\n",
+    "// start server\n",
+    "s.boot;\n",
+    "\n",
+    "// verify port\n",
+    "NetAddr.langPort\n",
+    "\n",
+    "(\n",
+    "// python server is listening on port 57310\n",
+    "b = NetAddr(\"127.0.0.1\", 57310);\n",
+    "\n",
+    "// our function to send a message to python\n",
+    "~startCalc = {|audioPath, grainSize, hopSize|\n",
+    "    b.sendMsg(\"/start_calc\", audioPath, grainSize, hopSize);\n",
+    "};\n",
+    "\n",
+    "// will store our shared data\n",
+    "q = ();\n",
+    "// empty matrix P\n",
+    "q[\\P] = [[1]];\n",
+    "// default buffer\n",
+    "q[\\buffer] = Buffer.read(s, Platform.resourceDir +/+ \"sounds/a11wlk01.wav\");\n",
+    "q[\\grainSize] = 44100;\n",
+    "q[\\hopSize] = 4000;\n",
+    "\n",
+    "// our callback function in which we parse the results from python\n",
+    "OSCdef(\\calcFinished, {|msg|\n",
+    "    var json = msg[1].asString.parseYAMLFile;\n",
+    "    q[\\P] = json[\"P\"].asFloat;\n",
+    "    q[\\buffer] = Buffer.read(s, json[\"audioPath\"]);\n",
+    "    q[\\grainSize] = json[\"grainSize\"].asFloat;\n",
+    "    q[\\hopSize] = json[\"hopSize\"].asFloat;\n",
+    "    \"Switched out data\".postln;\n",
+    "}, \"/calc_finished\");\n",
+    "\n",
+    "// a synthdef which can play a section of a buffer\n",
+    "SynthDef(\\bplaySection, {|out|\n",
+    "    var bufNum = \\bufnum.kr(0);\n",
+    "    var start = \\start.kr(0);\n",
+    "    var env = EnvGen.kr(Env.linen(\n",
+    "        attackTime: \\attack.kr(0.001),\n",
+    "        sustainTime: (\\end.kr(1000)-start)/BufSampleRate.kr(bufNum),\n",
+    "        releaseTime: \\release.kr(0.001),\n",
+    "    ), doneAction: Done.freeSelf);\n",
+    "    var sig = PlayBuf.ar(\n",
+    "        numChannels: 2,\n",
+    "        bufnum: bufNum,\n",
+    "        rate: BufRateScale.kr(bufNum) * \\rate.kr(1.0),\n",
+    "        startPos: start,\n",
+    "    );\n",
+    "    sig = sig*env*\\amp.kr(0.5);\n",
+    "    Out.ar(out, sig);\n",
+    "}).add;\n",
+    "\n",
+    "// a tdef which will playback the buffer according to our markov transition matrix P\n",
+    "Tdef(\\playMarkov, {\n",
+    "    var curState=0;\n",
+    "    loop {\n",
+    "        // calculate next state which aka the next grain\n",
+    "        curState = (0..q[\\P].shape[0]).wchoose(q[\\P][curState].normalizeSum);\n",
+    "        // playback\n",
+    "        Synth(\\bplaySection, [\n",
+    "            \\bufnum, q[\\buffer].bufnum,\n",
+    "            \\start, curState*q[\\hopSize],\n",
+    "             \\end, curState*q[\\hopSize] + q[\\grainSize],\n",
+    "            \\amp, 0.5,\n",
+    "            \\attack, 0.1,\n",
+    "        ]);\n",
+    "        // by reducing the factor of our wait time\n",
+    "        // the played back samples will overlap more\n",
+    "        ((q[\\grainSize]/s.sampleRate)*0.5).wait;\n",
+    "    };\n",
+    "}).play;\n",
+    ")\n",
+    "\n",
+    "// now we can change parameters from within supercollider\n",
+    "(\n",
+    "~startCalc.(\n",
+    "    // use absolute paths\n",
+    "    // the examlp is mono and we build for stereo so we will get some problems\n",
+    "    audioPath: Platform.resourceDir +/+ \"sounds/a11wlk01.wav\",\n",
+    "    grainSize: 10000,\n",
+    "    // pay attention when reducing hop size\n",
+    "    // as the calculated data grows exponentially\n",
+    "    // because we obtain more grains and for each\n",
+    "    // grain we calulate the distance to all other\n",
+    "    // grains\n",
+    "    hopSize: 1000,\n",
+    ")\n",
+    ")\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
