--- a/00_basics/machine_learning.ipynb
+++ b/00_basics/machine_learning.ipynb
@@ -1700,7 +1700,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
