--- a/00_basics/py_dimensions.ipynb
+++ b/00_basics/py_dimensions.ipynb
@@ -732,7 +732,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
