--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -4495,7 +4495,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
