add neural networks section

--- a/refs.bib
+++ b/refs.bib
@@ -36,3 +36,12 @@
 	PUBLISHER = {Springer-Verlag},
 	ADDRESS = {Berlin Heidelberg New York},
 }
+
+@misc{northcutt2021pervasive,
+      title={Pervasive Label Errors in Test Sets Destabilize Machine Learning Benchmarks}, 
+      author={Curtis G. Northcutt and Anish Athalye and Jonas Mueller},
+      year={2021},
+      eprint={2103.14749},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
