--- a/refs.bib
+++ b/refs.bib
@@ -45,3 +45,13 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+
+@BOOK{Wishart1994,
+	AUTHOR = {Wishart, Trevor},
+	YEAR = {1994},
+	TITLE = {Audible Design - A Plain and Easy Introduction to Practical Sound Composition},
+	EDITION = {},
+	ISBN = {978-0-951-03131-5},
+	PUBLISHER = {Orpheus the Pantomime},
+	ADDRESS = {},
+}
