add turing paper

--- a/refs.bib
+++ b/refs.bib
@@ -45,3 +45,17 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+
+@article{turing1936a,
+  annote = {Turing's famous demonstration of the formal limits on computation based on a proof that the {\em halting problem} is undecidable.},
+  author = {Turing, Alan M.},
+  journal = {Proceedings of the London Mathematical Society},
+  keywords = {halting},
+  number = 42,
+  pages = {230--265},
+  title = {On Computable Numbers, with an Application to the {E}ntscheidungsproblem},
+  url = {https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf},
+  volume = 2,
+  year = 1936
+}
+
